--- a/javaScript Application/myCode/section-14/events-01-starting-setup/events.html
+++ b/javaScript Application/myCode/section-14/events-01-starting-setup/events.html
@@ -12,6 +12,38 @@
     <div>
       <h2>Events in JavaScript</h2>
       <button>Click me</button>
+      <button>Click me too!</button>
     </div>
+    <form action="">
+      <label for="title">Title</label>
+      <input type="text" id="title" />
+      <button type="submit">Submit</button>
+    </form>
+    <ul>
+      <li>
+        <h2>item 1</h2>
+        <p>some text</p>
+      </li>
+      <li>
+        <h2>item 2</h2>
+        <p>some text</p>
+      </li>
+      <li>
+        <h2>item 3</h2>
+        <p>some text</p>
+      </li>
+      <li>
+        <h2>item 4</h2>
+        <p>some text</p>
+      </li>
+      <li>
+        <h2>item 5</h2>
+        <p>some text</p>
+      </li>
+      <li>
+        <h2>item 6</h2>
+        <p>some text</p>
+      </li>
+    </ul>
   </body>
 </html>
